# debye3d

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.py
docs/: API-Reference.md  Advanced-Usage.md  Examples.md  Installation.md  Quick-Start.md
examples/: debye3D_anisotropic_particles.ipynb  debye3D_spherical_particles.ipynb
src/debye3d/: __init__.py  adaptative_fibonacci.py  compute_f0.py  debye3d.py  generate_paracrystal_assembly.py  lobato_scattering.py  utilities.py
